--- a/authoring_tutorials/getting_started.qmd
+++ b/authoring_tutorials/getting_started.qmd
@@ -7,7 +7,7 @@ format:
     code-summary: "Show the code"
 ---
 
-This chapter introduces how to make a tutorial based off of our template at `lmu-osc/tutorial-template`, and assumes you are familiar with the structure of this repo after reading the previous chapter.
+This chapter introduces how to make a tutorial based off of our template at `lmu-osc/tutorial-template`, and establishes much of the technical details that need to be set up before some of the later chapter. Additionally, we assume you are familiar with the structure of the tutorial template repo after reading the previous chapter.
 
 ::: {.callout-important}
 ## Development Practices & gitflow
@@ -19,7 +19,7 @@ This helps us clearly see what content has been added when, by whom, and (thanks
 :::
 
 
-# Create a New Repo from Template
+# Create a New GitHub Repo
 
 1. If you are not already a member of the LMU OSC GitHub organization, request to be added to the organization by any of the admins.
 2. Navigate to the "Repositories" section of our organization, and click "New Repository"
@@ -38,8 +38,8 @@ This helps us clearly see what content has been added when, by whom, and (thanks
 
 ## Pages Deployment
 
-::: {.callout-tip}
-In Step 3: if your terminal becomes stuck on the message "*Deploying gh-pages branch to website (this may take a few minutes)*" and if your deployment wasn't successful, then you have probably not made the repository public. Navigate to the Visibility option in the repository settings, and change to public. Then, repeat Step 3.
+::: {.callout-tip title="Heads up!"}
+In Step 3: if your terminal becomes stuck on the message "*Deploying gh-pages branch to website (this may take a few minutes)*" and if your deployment wasn't successful, then you have probably not made the repository public. In the GitHub repo for your project, navigate to the Visibility option in the settings, and change to public. Then, repeat Step 3.
 :::
 
 1. Clone the new repository
@@ -56,28 +56,28 @@ You can check the status of the website deployment by navigating to Actions in t
 
 We use Zenodo for the generation of our repository DOIs, and the steps below outline a number of requirements or best practices we aim to follow when making our first Zenodo submission.
 
+### Enable Zenodo Extension
+
+1. Fellow the 5 GitHub steps for [linking Zenodo with GitHub](https://docs.github.com/en/repositories/archiving-a-github-repository/referencing-and-citing-content#issuing-a-persistent-identifier-for-your-repository-with-zenodo).
+2. If you don't want to connect these accounts or you are otherwise unable to authorize the repo on Zenodo, notify one of the admin members of the OSC GitHub organization. They should have the admin rights necessary to enable your new GitHub repo.
+3. If you're waiting on Step 2, you can still move forward through the rest of this Zenodo Preparation section.
+
 ### CITATION File
 
-Zenodo in particular looks for a Citation File Format citation file.
+Zenodo in particular looks for a Citation File Format citation file so that it can auto-generate a citation on the Zenodo website. GitHub can also use this file for creating a formatted citation.
 
-1. Open the CITATION.cff file, and complete it to the best of your ability/knowledge of what the tutorial will be named, who the authors will be, etc.
-2. Set the version to `0.0.1`.
-3. Remove the DOI field for now. This will be added back after we generated a DOI from Zenodo.
+1. Open the CITATION.cff file, and complete it to the best of your ability/knowledge of what the tutorial will be named, who the authors will be, etc. See the [project's documentation page](https://github.com/citation-file-format/citation-file-format/blob/main/README.md) if any fields are unclear, or open an issue in your repo and assign it to another OSC member.
+2. Remove the DOI field for now. This will be added back after we generate a DOI from Zenodo.
 
 ### About.qmd
 
 In addition to the CITATION file, we include citation information direcrtly in the tutorial in the About pages.
 
-1. Open the about.qmd file, and complete the `yaml` header with essentially the same citation information as above.
+1. Open the about.qmd file, and complete the `yaml` header with essentially the same citation information as above, filling out the fields to the best of your ability.
 
 ### README
 
 1. Open the README file, and add a basic description of the project. This does not need to be more than a few basic sentences for now.
-
-### Enable Zenodo Extension
-
-1. Fellow the 5 GitHub steps for [linking Zenodo with GitHub](https://docs.github.com/en/repositories/archiving-a-github-repository/referencing-and-citing-content#issuing-a-persistent-identifier-for-your-repository-with-zenodo).
-2. If you don't want to connect these accounts or you are otherwise unable to authorize the repo on Zenodo, notify one of the admin members of the OSC GitHub organization. They should have the admin rights necessary to enable your new GitHub repo.
   
 
 ## Zenodo Connection
