Revert "updates to content"
This reverts commit 992e35ae4ff39b4570088eab462476837ce3fd6b.

--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Manual"
+title: "Lab Manual"
 ---
 
-This is a Quarto website.
+This website serves as the lab manual for the LMU Open Science Center
 
